# src/main/java/com/nttdata/product/controller/BankProductController.java
@@ -7,7 +7,7 @@ import com.nttdata.product.utils.Utils;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.ProductsApi;
 import org.openapitools.model.BankProductBody;
-import org.openapitools.model.TemplateResponse;
+import org.openapitools.model.BankProductTemplateResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -27,7 +27,8 @@ public class BankProductController implements ProductsApi {
     private final BankProductService service;
 
     @Override
-    public Mono<ResponseEntity<TemplateResponse>> getAllProducts(ServerWebExchange exchange) {
+    public Mono<ResponseEntity<BankProductTemplateResponse>> getAllProducts
+            (ServerWebExchange exchange) {
         return service.getAll()
                 .collectList()
                 .map(products -> toResponse(products, 200, Constants.SUCCESS_FIND_LIST_PRODUCT))
@@ -35,7 +36,8 @@ public class BankProductController implements ProductsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<TemplateResponse>> getAllProductsByCustomerId(String id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<BankProductTemplateResponse>> getAllProductsByCustomerId
+            (String id, ServerWebExchange exchange) {
         return service.getByCustomerId(id)
                 .collectList()
                 .map(products -> toResponse(products, 200, Constants.SUCCESS_FIND_LIST_PRODUCT))
@@ -43,12 +45,13 @@ public class BankProductController implements ProductsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<TemplateResponse>> getProductById(String id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<BankProductTemplateResponse>> getProductById
+            (String id, ServerWebExchange exchange) {
         return service.getById(id)
                 .map(product -> toResponse(product, 200, Constants.SUCCESS_FIND_PRODUCT))
                 .map(ResponseEntity::ok)
                 .defaultIfEmpty(ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body(new TemplateResponse()
+                        .body(new BankProductTemplateResponse()
                                 .status(404)
                                 .message(Constants.ERROR_FIND_PRODUCT)
                                 .products(null)));
@@ -56,8 +59,8 @@ public class BankProductController implements ProductsApi {
 
 
     @Override
-    public Mono<ResponseEntity<TemplateResponse>> createProduct(
-            @RequestBody Mono<BankProductBody> request, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<BankProductTemplateResponse>> createProduct
+            (@RequestBody Mono<BankProductBody> request, ServerWebExchange exchange) {
 
         return request
                 .doOnNext(req -> log.debug("Request recibido: {}", req))
@@ -69,7 +72,7 @@ public class BankProductController implements ProductsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<TemplateResponse>> updateProduct(
+    public Mono<ResponseEntity<BankProductTemplateResponse>> updateProduct(
             String id,
             Mono<BankProductBody> request,
             ServerWebExchange exchange) {
@@ -84,7 +87,8 @@ public class BankProductController implements ProductsApi {
     }
 
     @Override
-    public Mono<ResponseEntity<TemplateResponse>> deleteProduct(String id, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<BankProductTemplateResponse>> deleteProduct
+            (String id, ServerWebExchange exchange) {
         return service.delete(id)
                 .map(product -> toResponse(200, Constants.SUCCESS_DELETE_PRODUCT))
                 .map(ResponseEntity::ok);
