# src/main/java/com/nttdata/product/utils/GlobalExceptionHandler.java
@@ -1,6 +1,6 @@
 package com.nttdata.product.utils;
 
-import org.openapitools.model.TemplateResponse;
+import org.openapitools.model.BankProductTemplateResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
@@ -13,32 +13,32 @@ public class GlobalExceptionHandler {
     private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<TemplateResponse> handleIllegalArgument(IllegalArgumentException e) {
+    public ResponseEntity<BankProductTemplateResponse> handleIllegalArgument(IllegalArgumentException e) {
         log.warn("Error de validación: {}", e.getMessage());
         return ResponseEntity
                 .badRequest()
-                .body(new TemplateResponse()
+                .body(new BankProductTemplateResponse()
                         .status(400)
                         .message(String.format(Constants.ERROR_VALIDATION_MESSAGE, e.getMessage()))
                         .products(null));
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<TemplateResponse> handleGeneralException(Exception e) {
+    public ResponseEntity<BankProductTemplateResponse> handleGeneralException(Exception e) {
         log.error("Error inesperado: ", e);
         return ResponseEntity
                 .status(500)
-                .body(new TemplateResponse()
+                .body(new BankProductTemplateResponse()
                         .status(500)
                         .message(Constants.ERROR_INTERNAL)
                         .products(null));
     }
 
     @ExceptionHandler(EmptyResultException.class)
-    public ResponseEntity<TemplateResponse> handleEmptyResult(EmptyResultException e) {
+    public ResponseEntity<BankProductTemplateResponse> handleEmptyResult(EmptyResultException e) {
         return ResponseEntity
                 .status(500)
-                .body(new TemplateResponse()
+                .body(new BankProductTemplateResponse()
                         .status(404)
                         .message(e.getMessage())
                         .products(null));
