# src/main/resources/static/openapi/product-service-openapi.yaml
@@ -4,10 +4,52 @@ info:
   version: 1.0.0
   description: API para gestionar productos bancarios (cuentas, créditos, tarjetas)
 servers:
-  - url: http://localhost:8081
-    description: Servidor local
+  - url: http://localhost:8081/product
 
 paths:
+  /debit-cards:
+    post:
+      summary: Registrar una nueva tarjeta de débito
+      operationId: createDebitCard
+      tags:
+        - DebitCards
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CardBody'
+      responses:
+        '200':
+          description: Tarjeta registrada exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CardTemplateResponse'
+
+  /debit-cards/{id}:
+    get:
+      summary: Obtener tarjeta de débito por ID
+      operationId: getDebitCardById
+      tags:
+        - DebitCards
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: Identificador único de la tarjeta
+      responses:
+        '200':
+          description: Tarjeta encontrada
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CardTemplateResponse'
+        '404':
+          description: Tarjeta no encontrada
+
   /products/customer/{id}:
     get:
       summary: Obtener un producto por su codigo de cliente
@@ -26,7 +68,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TemplateResponse'
+                $ref: '#/components/schemas/BankProductTemplateResponse'
 
   /products:
     get:
@@ -39,7 +81,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TemplateResponse'
+                $ref: '#/components/schemas/BankProductTemplateResponse'
 
     post:
       summary: Crear un nuevo producto bancario
@@ -57,7 +99,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TemplateResponse'
+                $ref: '#/components/schemas/BankProductTemplateResponse'
 
   /products/{id}:
     get:
@@ -77,7 +119,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TemplateResponse'
+                $ref: '#/components/schemas/BankProductTemplateResponse'
 
     put:
       summary: Actualizar un producto bancario
@@ -102,7 +144,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TemplateResponse'
+                $ref: '#/components/schemas/BankProductTemplateResponse'
 
     delete:
       summary: Eliminar un producto bancario
@@ -121,7 +163,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TemplateResponse'
+                $ref: '#/components/schemas/BankProductTemplateResponse'
 
 components:
   schemas:
@@ -168,6 +210,53 @@ components:
             maintenanceFee: 0
             monthlyLimit: 2
             requiredMonthlyAverageBalance: 1000
+
+    CardBody:
+      type: object
+      description: Tarjeta de débito asociada a múltiples cuentas bancarias
+      properties:
+        cardNumber:
+          type: string
+          example: "1234-5678-9012-3456"
+        customerId:
+          type: string
+          example: cust001
+        primaryAccountId:
+          type: string
+          example: acc001
+        linkedAccountIds:
+          type: array
+          items:
+            type: string
+          example: [ "acc001", "acc002", "acc003" ]
+        active:
+          type: boolean
+          example: true
+
+    CardResponse:
+      type: object
+      description: Tarjeta de débito asociada a múltiples cuentas bancarias
+      properties:
+        id:
+          type: string
+          example: card-001
+        cardNumber:
+          type: string
+          example: "1234-5678-9012-3456"
+        customerId:
+          type: string
+          example: cust001
+        primaryAccountId:
+          type: string
+          example: acc001
+        linkedAccountIds:
+          type: array
+          items:
+            type: string
+          example: [ "acc001", "acc002", "acc003" ]
+        active:
+          type: boolean
+          example: true
 
     BankProductResponse:
       type: object
@@ -216,7 +305,7 @@ components:
             maintenanceFee: 0
             monthlyLimit: 2
 
-    TemplateResponse:
+    BankProductTemplateResponse:
       type: object
       description: Respuesta procesada
       properties:
@@ -233,3 +322,21 @@ components:
           description: Lista de productos bancarios
           items:
             $ref: '#/components/schemas/BankProductResponse'
+
+    CardTemplateResponse:
+      type: object
+      description: Respuesta procesada
+      properties:
+        status:
+          type: integer
+          description: Código HTTP de respuesta
+          example: 200
+        message:
+          type: string
+          description: Mensaje asociado a la operación
+          example: Producto procesado correctamente
+        cards:
+          type: array
+          description: Lista de productos bancarios
+          items:
+            $ref: '#/components/schemas/CardResponse'
